Fix skipOffset with dynamic RegExpr

Summary:
The pattern used depends on the previous contexts so skipOffset cannot be computed with a dynamic regex.

BUG: 399388

Reviewers: #framework_syntax_highlighting, dhaumann, cullmann

Reviewed By: #framework_syntax_highlighting, cullmann

Subscribers: kwrite-devel, kde-frameworks-devel

Tags: #kate, #frameworks

Differential Revision: https://phabricator.kde.org/D24179